Footer done (Issue with opyright text)

--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2954,12 +2954,14 @@ ul.staggered-list li {
 }
 
 .page-footer {
+
   padding-top: 20px;
-  color: #fff;
-  background-color: #ee6e73;
+  color: orangered;
+  background-color: black;
 }
 
 .page-footer .footer-copyright {
+  text-align: center;
   overflow: hidden;
   min-height: 50px;
   display: -webkit-box;
