--- a/css/materialize.css
+++ b/css/materialize.css
@@ -7,6 +7,10 @@
   background-color: #e51c23 !important;
 }
 
+.copyright{
+max-width:;
+}
+
 .bold-text{
   font-weight: bold;
 }
@@ -2961,13 +2965,14 @@ ul.staggered-list li {
 }
 
 .page-footer .footer-copyright {
-  text-align: center;
+  
   overflow: hidden;
   min-height: 50px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  align-items: center;
   -webkit-box-align: center;
   -webkit-align-items: center;
       -ms-flex-align: center;
@@ -2975,7 +2980,7 @@ ul.staggered-list li {
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
-          justify-content: space-between;
+          justify-content: center;
   padding: 10px 0px;
   color: rgba(255, 255, 255, 0.8);
   background-color: rgba(51, 51, 51, 0.08);
