--- a/css/materialize.css
+++ b/css/materialize.css
@@ -7,8 +7,9 @@
   background-color: #e51c23 !important;
 }
 
-.copyright{
-max-width:;
+.mobile{
+  height: 550px;
+  max-width: 100%;
 }
 
 .bold-text{
@@ -2830,7 +2831,7 @@ video.responsive-video {
 .parallax-container {
   position: relative;
   overflow: hidden;
-  height: 500px;
+  height: 550px;
 }
 
 .parallax-container .parallax {
